// Vitest Snapshot v1

exports[`test radio example 1`] = `
"<div class=\\"app-type\\" data-v-497ba92f=\\"\\">基本使用</div>
<div class=\\"var-radio__wrap\\" data-v-497ba92f=\\"\\">
  <div class=\\"var-radio\\">
    <div class=\\"var-radio__action var-radio--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
    <div class=\\"var-radio__text\\">当前的值: false</div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\" data-v-497ba92f=\\"\\">设置状态值</div>
<div class=\\"var-radio__wrap\\" data-v-497ba92f=\\"\\">
  <div class=\\"var-radio\\">
    <div class=\\"var-radio__action var-radio--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
    <div class=\\"var-radio__text\\">当前的值: 0</div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\" data-v-497ba92f=\\"\\">修改图标和颜色</div>
<div class=\\"var-radio__wrap\\" data-v-497ba92f=\\"\\">
  <div class=\\"var-radio\\">
    <div class=\\"var-radio__action var-radio--unchecked\\" style=\\"color: rgb(233, 158, 180);\\"><i class=\\"var-icon var-icon--set var-icon-heart-half-full\\" style=\\"transition: transform 0ms; font-size: 24px;\\" data-v-497ba92f=\\"\\"></i></div>
    <div class=\\"var-radio__text\\">当前的值: false</div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\" data-v-497ba92f=\\"\\">禁用</div>
<div class=\\"var-radio__wrap\\" data-v-497ba92f=\\"\\">
  <div class=\\"var-radio\\">
    <div class=\\"var-radio__action var-radio--unchecked var-radio--disabled\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
    <div class=\\"var-radio__text var-radio--disabled\\">当前的值: false</div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\" data-v-497ba92f=\\"\\">只读</div>
<div class=\\"var-radio__wrap\\" data-v-497ba92f=\\"\\">
  <div class=\\"var-radio\\">
    <div class=\\"var-radio__action var-radio--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
    <div class=\\"var-radio__text\\">当前的值: false</div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\" data-v-497ba92f=\\"\\">单选框组</div>
<div class=\\"var-radio-group__wrap\\" data-v-497ba92f=\\"\\">
  <div class=\\"var-radio-group var-radio-group--horizontal\\">
    <div class=\\"var-radio__wrap\\" data-v-497ba92f=\\"\\">
      <div class=\\"var-radio\\">
        <div class=\\"var-radio__action var-radio--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
        <div class=\\"var-radio__text\\">吃饭</div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
    <div class=\\"var-radio__wrap\\" data-v-497ba92f=\\"\\">
      <div class=\\"var-radio\\">
        <div class=\\"var-radio__action var-radio--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
        <div class=\\"var-radio__text\\">睡觉</div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"relation\\" data-v-497ba92f=\\"\\">当前的值: 0</div>
<div class=\\"app-type\\" data-v-497ba92f=\\"\\">单选框字段校验</div>
<div class=\\"var-radio__wrap\\" data-v-497ba92f=\\"\\">
  <div class=\\"var-radio\\">
    <div class=\\"var-radio__action var-radio--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
    <div class=\\"var-radio__text\\">当前的值: false</div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"app-type\\" data-v-497ba92f=\\"\\">单选框组字段校验</div>
<div class=\\"var-radio-group__wrap\\" data-v-497ba92f=\\"\\">
  <div class=\\"var-radio-group var-radio-group--horizontal\\">
    <div class=\\"var-radio__wrap\\" data-v-497ba92f=\\"\\">
      <div class=\\"var-radio\\">
        <div class=\\"var-radio__action var-radio--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
        <div class=\\"var-radio__text\\">吃饭</div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
    <div class=\\"var-radio__wrap\\" data-v-497ba92f=\\"\\">
      <div class=\\"var-radio\\">
        <div class=\\"var-radio__action var-radio--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
        <div class=\\"var-radio__text\\">睡觉</div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
<div class=\\"relation\\" data-v-497ba92f=\\"\\">当前的值: 0</div>
<div class=\\"space\\" data-v-497ba92f=\\"\\"></div>"
`;

exports[`test radio group layout direction 1`] = `
"<div class=\\"var-radio-group__wrap\\">
  <div class=\\"var-radio-group var-radio-group--vertical\\">
    <div class=\\"var-radio__wrap\\">
      <div class=\\"var-radio\\">
        <div class=\\"var-radio__action var-radio--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
        <div class=\\"var-radio__text\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
    <div class=\\"var-radio__wrap\\">
      <div class=\\"var-radio\\">
        <div class=\\"var-radio__action var-radio--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
        <div class=\\"var-radio__text\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test radio group validation 1`] = `
"<div class=\\"var-radio-group__wrap\\">
  <div class=\\"var-radio-group var-radio-group--horizontal\\">
    <div class=\\"var-radio__wrap\\">
      <div class=\\"var-radio\\">
        <div class=\\"var-radio__action var-radio--unchecked var-radio--error\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
        <div class=\\"var-radio__text var-radio--error\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
    <div class=\\"var-radio__wrap\\">
      <div class=\\"var-radio\\">
        <div class=\\"var-radio__action var-radio--checked var-radio--error\\"><i class=\\"var-icon var-icon--set var-icon-radio-marked var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
        <div class=\\"var-radio__text var-radio--error\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub>
    <div class=\\"var-form-details\\">
      <div class=\\"var-form-details__message\\">必须选第一个</div>
      <div class=\\"var-form-details__length\\"></div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test radio group validation 2`] = `
"<div class=\\"var-radio-group__wrap\\">
  <div class=\\"var-radio-group var-radio-group--horizontal\\">
    <div class=\\"var-radio__wrap\\">
      <div class=\\"var-radio\\">
        <div class=\\"var-radio__action var-radio--checked\\"><i class=\\"var-icon var-icon--set var-icon-radio-marked var-radio__icon var-radio--with-animation\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
        <div class=\\"var-radio__text\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
    <div class=\\"var-radio__wrap\\">
      <div class=\\"var-radio\\">
        <div class=\\"var-radio__action var-radio--unchecked\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
        <div class=\\"var-radio__text\\"></div>
      </div>
      <transition-stub>
        <!--v-if-->
      </transition-stub>
    </div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test radio validation 1`] = `
"<div class=\\"var-radio__wrap\\">
  <div class=\\"var-radio\\">
    <div class=\\"var-radio__action var-radio--unchecked var-radio--error\\"><i class=\\"var-icon var-icon--set var-icon-radio-blank var-radio__icon\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
    <div class=\\"var-radio__text var-radio--error\\"></div>
  </div>
  <transition-stub>
    <div class=\\"var-form-details\\">
      <div class=\\"var-form-details__message\\">您必须勾选</div>
      <div class=\\"var-form-details__length\\"></div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test radio validation 2`] = `
"<div class=\\"var-radio__wrap\\">
  <div class=\\"var-radio\\">
    <div class=\\"var-radio__action var-radio--checked\\"><i class=\\"var-icon var-icon--set var-icon-radio-marked var-radio__icon var-radio--with-animation\\" style=\\"transition: transform 0ms;\\" var-radio-cover=\\"\\"></i></div>
    <div class=\\"var-radio__text\\"></div>
  </div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>"
`;
